--- a/src/style.css
+++ b/src/style.css
@@ -15,11 +15,15 @@
   --yellow5: #fef3c7;
   --white: #fffbeb;
 }
+p,h1,h2,h3{
+  padding: 0;
+  margin: 0;
+}
 body {
   background-color: black;
   background-image: var(--HomeBGImg);
   background-size: cover;
-  /* backgro */
+  background-attachment: fixed;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -31,7 +35,6 @@ body {
 
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
 }
 
 a {
@@ -52,6 +55,12 @@ button {
   background: none;
   cursor: pointer;
 }
+
+#content{
+  overflow-x:hidden ;
+}
+
+/* Home */
 
 header {
   padding: 20px;
@@ -89,7 +98,7 @@ nav > button {
   width: 700px;
   /* outline: 2px solid red; */
   margin-left: 5rem;
-  margin-top: 2.5rem;
+  margin-top: 2rem;
 }
 
 .restName {
@@ -123,6 +132,118 @@ nav > button {
   background-color: var(--yellow1);
 }
 
+/* menu */
+.menuContainer{
+  background-color:rgba(0, 0, 0, 0.551);
+  margin:20px auto;
+  width:90vw;
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+  padding: 20px;
+}
+
+.ourMenu{
+  color: white;
+  margin:10px auto;
+  width: 90%;
+}
+.ourMenu h1{
+  text-align: center;
+  margin-bottom: 10px;
+}
+.ourMenu p{
+  text-align: center;
+  color: var(--yellow3);
+  border-bottom: 2px solid var(--yellow2);
+  padding-bottom: 20px;
+}
+
+.pizzaCards{
+  display: grid;
+  width:95%;
+  grid-template-columns:repeat( auto-fit, minmax(250px, 1fr) );
+  grid-auto-rows: 1fr;
+  gap: 30px;
+  margin:20px auto;
+}
+
+.pizzaCard{
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1.5fr 50px 70px 70px;
+  background-color: rgba(0, 0, 0, 0.693);
+  border-radius: 10px;
+}
+.pizzaImg{
+  grid-row: 1/2;
+  grid-column: 1/3;
+  width:100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px 10px 0 0;
+}
+.pizzaName{
+  grid-column: 1/2;
+  grid-row: 2/3;
+  align-self: center;
+  justify-self: center;
+  font-weight: 500;
+}
+.pizzaPrice{
+  grid-column: 2/3;
+  grid-row: 2/3;
+  background-color: var(--orange2);
+  color: var(--white);
+  text-align: center;
+  padding-top:14px;
+  font-weight: 500;
+  border-radius: 10px 0 10px 10px;
+}
+.pizzaDesc{
+  grid-row: -2/-3;
+  grid-column: 1/-1;
+  text-align: center;
+  padding:20px 10px 0px 10px;
+}
+.buyBtn{
+  background-color: var(--brown3);
+  color: var(--white);
+  grid-column: 1/3;
+  grid-row:-1/-2;
+  margin:15px 30px;
+  border-radius: 20px;
+}
+.buyBtn:hover{
+  background-color:var(--orange1);
+  /* color: ; */
+}
+.seeBtn{
+  width: 150px;
+  align-self: center;
+  background-color: var(--orange2);
+  color: var(--white);
+  border-radius: 20px;
+  padding: 10px 20px;
+  font-weight: 500;
+  margin: 20px 0;
+}
+.seeBtn:hover {
+  color: var(--white);
+  background-color: var(--yellow1);
+}
+
+/* contact */
+.contContainer{
+  margin:20px;
+  outline: 1px solid greenyellow;
+}
+.addressContainer{
+  outline:1px solid red;
+  width:50%;
+}
+
 .hidden {
   display: none;
 }
+
